<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/browsing_history"
            android:title="@string/browsing_history"/>
        <item
            android:id="@+id/about"
            android:title="@string/about"/>
        <item
            android:id="@+id/bug"
            android:title="@string/bug"/>

        <item
            android:id="@+id/download_manager"
            android:title="@string/download_manager" />

        <item
            android:id="@+id/nav_theme"
            android:title="Theme"
            app:actionLayout="@layout/theme_switch" />
    </group>

</menu>